--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 anyhow = "1.0.86"
 chrono = "0.4.38"
 serde = { version = "1.0.204", features = ["derive"] }
@@ -14,8 +13,7 @@ serde_json = "1.0.120"
 thiserror = "1.0.63"
 clap = { version = "4.5.15", features = ["derive", "env"] }
 csv = "1.3.0"
-oauth2 = "4.4.2"
-tokio = { version = "1.41.1", features = ["full"] }
+oauth2 = { version = "4.4.2", features = ["ureq"] }
 hyper = { version = "1.4.1", features = ["full"] }
 hyper-util = { version = "0.1.8", features = ["full"] }
 http-body-util = "0.1.2"
@@ -27,3 +25,5 @@ self-replace = "1.5.0"
 tempfile = "3.14.0"
 eframe = "0.29.1"
 egui = "0.29.1"
+ureq = { version = "2.12.1", features = ["json"] }
+tiny_http = "0.12.0"
