--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,7 @@ serde_json = "1.0.120"
 thiserror = "1.0.63"
 clap = { version = "4.5.15", features = ["derive", "env"] }
 csv = "1.3.0"
-oauth2 = { version = "4.4.2", features = ["ureq"] }
-hyper = { version = "1.4.1", features = ["full"] }
-hyper-util = { version = "0.1.8", features = ["full"] }
-http-body-util = "0.1.2"
+oauth2 = { version = "4.4.2", default-features = false, features = ["ureq"] }
 url = "2.5.2"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
@@ -27,3 +24,4 @@ eframe = "0.29.1"
 egui = "0.29.1"
 ureq = { version = "2.12.1", features = ["json"] }
 tiny_http = "0.12.0"
+http = "1.2.0"
